ISPN-10204 Add 'java.se' module to server integration testsuite